# cpp-training

./: .gitignore  Introduction to C++.bmpr  README.md  Support de cours.bmpr
00_LostFortune/src/: SConscript  main.cpp  variables.cpp
00_SdlTraining/: SdlTraining.sln
00_SdlTraining/02_DisplaySurface/: 02_DisplaySurface.vcxproj  02_DisplaySurface.vcxproj.filters  Main.cpp
00_SdlTraining/03_EventDrivenProgramming/: 03_EventDrivenProgramming.vcxproj  03_EventDrivenProgramming.vcxproj.filters  Main.cpp
00_SdlTraining/04_KeyPress/: 04_KeyPress.vcxproj  04_KeyPress.vcxproj.filters  Main.cpp
00_SdlTraining/05_OptimisedSurfaceLoading/: 05_OptimisedSurfaceLoading.vcxproj  05_OptimisedSurfaceLoading.vcxproj.filters  Main.cpp
00_SdlTraining/06_LoadingPng/: 06_LoadingPng.vcxproj  06_LoadingPng.vcxproj.filters  Main.cpp
00_SdlTraining/07_TextureRendering/: 07_TextureRendering.vcxproj  Main.cpp
00_SdlTraining/08_GeometryRendering/: 08_GeometryRendering.vcxproj
00_SdlTraining/SdlTraining/: Main.cpp  SdlTraining.vcxproj
01_GuessMyNumber/src/: diceRoller.cpp  main.cpp
01_GuestMyNumber/src/: SConscript
02_GuessMyNumber/src/: diceRoller.cpp  main.cpp
02_Pong/02_Pong/: 02_Pong.vcxproj  02_Pong.vcxproj.filters  Ball.cpp  Ball.h  Color.h  Constants.h  Drawable.cpp  Drawable.h  DrawableCircle.cpp  DrawableCircle.h  DrawableRect.cpp  DrawableRect.h  Game.cpp  Game.h  Rect.h  (+12 more)
03_BullsNCowsConsole/: BullsNCowsConsole.sln
04_Pong/: 02_Pong.sln
Raylib/01_Pong/: Ball.cpp  Ball.h  CMakeLists.txt  Collisions.h  Paddle.cpp  Paddle.h  RectangleI.h  Text.cpp  Text.h  main.cpp
(+205 files in other folders)
